<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="about_content">"Simon Tatham’s Portable Puzzle Collection
Version %s"</string>
    <string name="app_name">Puzzles</string>
    <string name="missing_game_generator">Puzzles is missing a required file! Try reinstalling from Google Play</string>
    <string name="website_url">https://chris.boyle.name/projects/android-puzzles/</string>
    <string name="issues_url">https://github.com/chrisboyle/sgtpuzzles/issues/new/choose</string>
    <string name="feedback_dialog" tools:ignore="TypographyQuotes"><![CDATA[
<p>There are two ways to send feedback:</p>
<p><a href="https://play.google.com/store/apps/details?id={0}">Leave a review at Google Play</a></p>
<p><a href="{1}">Report a bug or feature request at GitHub</a></p>
<p>GitHub allows attachments like screenshots and saved games, but requires creating an account.</p>
<p>Any data you give to Google or GitHub is subject to their respective terms and privacy policies.</p>
]]></string>
    <string name="bug_dialog">Oops! You’ve hit a bug: “{0}”. Would you like to report this at the GitHub issue tracker so I can investigate? This is subject to GitHub’s terms and privacy policy.</string>
    <string name="report">Report</string>
    <string name="cancel">Cancel</string>
    <string name="no_browser_title">Failed to launch browser/application</string>
    <string name="no_browser_body">To complete the action you requested, open this URL in a browser:</string>
    <string name="how_to_scroll">Scroll with two fingers apart</string>
    <string name="toast_swap_l_r_on">Swapped press &amp; long-press</string>
    <string name="toast_swap_l_r_off">Press &amp; long-press are no longer swapped</string>
    <string name="email_subject">Puzzles v{0} {1} on {2} / {3} / {4}</string>
    <string name="no_email_app">No email app? Info copied to clipboard; please send it to {0}</string>
    <string name="filename">Filename</string>
    <string name="save">Save</string>
    <string name="save_failed_prefix">Failed to save: </string>
    <string name="saf_missing_short">missing Storage Access Framework</string>
    <string name="cache_fail_short">failed to write to cache directory</string>
    <string name="storage_not_ready">Storage device is not ready</string>
    <string name="file_too_big">This looks much too big to be a saved game</string>
    <string name="file_exists">File exists; overwrite it?</string>
    <string name="file_saved">Saved the game in {0}</string>
    <string name="replaceGame">You have an unfinished game of {0} which this will replace. Continue loading?</string>
    <string name="undo_new_game_toast">Undoing into previous game</string>
	<string name="redo_new_game_toast">Redoing into previously generated game</string>
    <string name="storage_permission_explanation">"To import this file an extra permission is needed. Android might describe this permission in terms of photos and media.

If you don’t want to grant it you can instead locate the file from within Puzzles using the Open button on the game chooser."</string>
    <string name="storage_permission_denied">Could not open {0} because permission was denied. You can either locate the file from within Puzzles (use the Open button on the game chooser) or you can go to the Settings app, then Apps, Puzzles, Permissions, and grant storage permission.</string>
    <string name="storage_permission_bug">Because of a bug in Android, the permission grant will not take effect until you restart Puzzles (swipe it away in Recent Apps).</string>
    <string name="storage_permission_bug_more">Bug details</string>
    <string name="storage_permission_bug_url">https://code.google.com/p/android-developer-preview/issues/detail?id=2982"</string>
    <string name="how_to_play_game">How to play {0}</string>
    <string name="starting">Generating game…</string>
    <string name="resuming">Resuming game…</string>
    <string name="reset_this_backend">Reset %s</string>
    <string name="completedPrompt">Buttons when a game is completed</string>
    <string name="completedPromptSummary">Shortcuts to start a new or different game</string>
    <string name="victoryFlash">Animations when a game is completed</string>
    <string name="victoryFlashSummary">Victory flash</string>
    <string name="Change_type">Change type</string>
    <string name="games_starred">Starred (long press to toggle)</string>
    <string name="games_others">Others</string>
    <string name="games_others_none_starred">Long press to star a game</string>
    <string name="title_activity_help">Help</string>
    <string name="Game">Game</string>
    <string name="Other_game">Other game</string>
    <string name="View_as_grid">View as grid</string>
    <string name="View_as_list">View as list</string>
    <string name="New_game">New game</string>
    <string name="Restart">Restart</string>
    <string name="Game_ID_">Game ID…</string>
    <string name="Seed_">Seed…</string>
    <string name="seedWarning">The current game has no seed because it was generated from a Game ID. The value above is an empty seed.</string>
    <string name="Load_">Load…</string>
    <string name="Save_">Save…</string>
    <string name="Share_">Share…</string>
    <string name="share_title">Share puzzle with</string>
    <string name="Type">Type</string>
    <string name="Custom_">Custom…</string>
    <string name="Help">Help</string>
    <string name="How_to_play_this_game">How to play this game</string>
    <string name="Project_website">Project website</string>
    <string name="Send_feedback">Send feedback</string>
    <string name="About_this_app">About this app</string>
    <string name="Undo">Undo</string>
    <string name="Redo">Redo</string>
    <string name="Settings">Settings</string>
    <string name="Show_solution">Show solution</string>
    <string name="gameChooser">Game chooser</string>
    <string name="chooserStyle">Game chooser style</string>
    <string name="chooserStyleList">Show descriptions</string>
    <string name="chooserStyleGrid">Icons only (compact)</string>
    <string name="thisGame">This game</string>
    <string name="allGames">All games</string>
    <string name="advancedSettings">Display and input</string>
    <string name="advancedSettingsSummary">Less frequently changed settings</string>
    <string name="displaySettings">Display</string>
    <string name="keyboardSettings">Keyboard</string>
    <string name="mouseSettings">Mouse/Stylus</string>
    <string name="arrowKeysIn">Arrow keys in {0}</string>
    <string name="arrowKeysUnavailable">Arrow keys unavailable</string>
    <string name="arrowKeysUnavailableIn">Arrow keys unavailable in {0}</string>
    <string name="fullscreen">Full screen</string>
    <string name="fullscreenSummary">Hide notifications</string>
    <string name="stayAwake">Stay awake</string>
    <string name="stayAwakeSummary">Keep screen on while in the foreground</string>
    <string name="orientation">Screen orientation</string>
    <string name="orientationUnspecified">Unlocked</string>
    <string name="orientationPortrait">Portrait</string>
    <string name="orientationLandscape">Landscape</string>
    <string name="nightMode">Night mode</string>
    <string name="nightModeOn">On</string>
    <string name="nightModeAuto">In low light</string>
    <string name="nightModeOff">Off</string>
    <string name="night_mode_hint">Night mode can be disabled in Settings</string>
    <string name="limitDpi">Thicker lines for readability</string>
    <string name="limitDpiModeOff">Never (1 pixel = 1 pixel)</string>
    <string name="limitDpiModeAuto">Thinner as puzzle size increases (recommended)</string>
    <string name="limitDpiModeOn">Always 160dpi (not recommended)</string>
    <string name="undoRedoOnKeyboard">Include Undo/Redo</string>
    <string name="undoRedoOnKeyboardSummary">Allows auto repeat (otherwise in action bar)</string>
    <string name="keyboardBorders">Show edges of keys</string>
    <string name="keyboardBordersSummary">Otherwise only symbols are shown</string>
    <string name="extMouseLongPress">Use long-press with mouse/stylus</string>
    <string name="extMouseLongPressNever">Never (only use devices with a right/alt button)</string>
    <string name="extMouseLongPressAuto">Auto (disable when a right/alt click is detected)</string>
    <string name="extMouseLongPressAlways">Always (same behavior as finger presses)</string>
    <string name="extMouseBackKey">Support right mouse button</string>
    <string name="extMouseBackKeySummary">"Override \"Back\" functionality of right button in puzzles"</string>
    <string name="bridgesShowH">Show “H” in Bridges"</string>
    <string name="bridgesShowHSummary">Undocumented &#8220;solve from here&#8221; action</string>
    <string name="unequalShowH">Show “H” in Unequal</string>
    <string name="unequalShowHSummary">Adds all pencil marks, removes “obvious” ones, can solve entire puzzle</string>
    <string name="patternShowLengths">Show drag lengths</string>
    <string name="patternShowLengthsSummary">Show number of squares selected</string>
    <string name="controlsReminders">Show reminders of controls</string>
    <string name="controlsRemindersSummary">E.g. explain long-press when starting a game</string>
    <string name="name_blackbox">Black Box</string>
    <string name="name_bridges">Bridges</string>
    <string name="name_cube">Cube</string>
    <string name="name_dominosa">Dominosa</string>
    <string name="name_fifteen">Fifteen</string>
    <string name="name_filling">Filling</string>
    <string name="name_flip">Flip</string>
    <string name="name_flood">Flood</string>
    <string name="name_galaxies">Galaxies</string>
    <string name="name_guess">Guess</string>
    <string name="name_inertia">Inertia</string>
    <string name="name_keen">Keen</string>
    <string name="name_lightup">Light Up</string>
    <string name="name_loopy">Loopy</string>
    <string name="name_magnets">Magnets</string>
    <string name="name_map">Map</string>
    <string name="name_mines">Mines</string>
    <string name="name_mosaic">Mosaic</string>
    <string name="name_net">Net</string>
    <string name="name_netslide">Netslide</string>
    <string name="name_palisade">Palisade</string>
    <string name="name_pattern">Pattern</string>
    <string name="name_pearl">Pearl</string>
    <string name="name_pegs">Pegs</string>
    <string name="name_range">Range</string>
    <string name="name_rect">Rectangles</string>
    <string name="name_samegame">Same Game</string>
    <string name="name_signpost">Signpost</string>
    <string name="name_singles">Singles</string>
    <string name="name_sixteen">Sixteen</string>
    <string name="name_slant">Slant</string>
    <string name="name_solo">Solo</string>
    <string name="name_tents">Tents</string>
    <string name="name_towers">Towers</string>
    <string name="name_tracks">Tracks</string>
    <string name="name_twiddle">Twiddle</string>
    <string name="name_undead">Undead</string>
    <string name="name_unequal">Unequal</string>
    <string name="name_unruly">Unruly</string>
    <string name="name_untangle">Untangle</string>
    <string name="no_desc">(no summary available)</string>
    <string name="desc_blackbox">Locate the balls inside the box by firing lasers and observing how they are deflected or absorbed.</string>
    <string name="desc_bridges">Connect the islands with the given bridge counts so no bridges are crossing.</string>
    <string name="desc_cube">Roll the cube to collect all the paint.</string>
    <string name="desc_dominosa">Pair the numbers to form a complete and distinct set of dominoes.</string>
    <string name="desc_fifteen">Slide tiles around to form a grid in numerical order.</string>
    <string name="desc_filling">Number the squares to form regions with the same number, which is also the size of the region.</string>
    <string name="COMPLETED">COMPLETED!</string>
</resources>