<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

	<PreferenceCategory android:title="@string/gameChooser" android:key="gameChooser">
		<ListPreference android:title="@string/chooserStyle"
							android:key="chooserStyle"
							android:entryValues="@array/chooserStyles"
							android:entries="@array/chooserStyleDescs"
							android:defaultValue="@string/chooserStyleDefaultValue" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/thisGame" android:key="thisGame">
		<Preference android:key="arrowKeysUnavailable"
					android:summary="@string/arrowKeysUnavailable" android:selectable="false"/>
		<CheckBoxPreference android:title="@string/bridgesShowH"
							android:key="bridgesShowH"
							android:summary="@string/bridgesShowHSummary"
							android:defaultValue="false" />
		<CheckBoxPreference android:title="@string/unequalShowH"
							android:key="unequalShowH"
							android:summary="@string/unequalShowHSummary"
							android:defaultValue="false" />
		<!--CheckBoxPreference android:title="@string/patternShowLengths"
							android:key="patternToastLengths"
							android:summary="@string/patternShowLengthsSummary"
							android:defaultValue="false" /-->
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/allGames">
		<CheckBoxPreference android:title="@string/controlsReminders"
							android:summary="@string/controlsRemindersSummary"
							android:key="controlsReminders"
							android:defaultValue="true" />
		<ListPreference android:title="@string/orientation"
						android:key="orientation"
						android:entryValues="@array/orientationModes"
						android:entries="@array/orientationModeDescs"
						android:defaultValue="@string/orientationModeDefaultValue" />
		<ListPreference android:title="@string/nightMode"
						android:key="nightMode"
						android:entryValues="@array/nightModes"
						android:entries="@array/nightModeDescs"
						android:defaultValue="@string/nightModeDefaultValue" />
		<PreferenceScreen android:title="@string/advancedSettings"
						  android:summary="@string/advancedSettingsSummary"
						  android:key="advancedSettings"
						  android:persistent="false"
						  android:fragment="name.boyle.chris.sgtpuzzles.PrefsActivity$PrefsDisplayAndInputFragment" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/About_this_app">
		<Preference android:key="about_content"
				android:summary="@string/about_content" android:selectable="true" android:icon="@drawable/ic_content_copy"/>
		<PreferenceScreen android:title="@string/Project_website">
			<intent android:action="android.intent.action.VIEW"
					android:data="@string/website_url"/>
		</PreferenceScreen>
		<Preference android:key="send_feedback" android:title="@string/Send_feedback" android:selectable="true"/>
	</PreferenceCategory>

</PreferenceScreen>