<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/completed_panel_background"
    android:gravity="bottom"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/COMPLETED"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dip"
        android:layout_margin="3dp"
        android:orientation="horizontal"
        android:paddingTop="0dp" >

        <Button
            android:id="@+id/newgame"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:drawablePadding="2dp"
            android:drawableTop="@drawable/ic_action_new"
            android:text="@string/New_game" />

        <Button
            android:id="@+id/type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:drawablePadding="2dp"
            android:drawableTop="@drawable/ic_action_type"
            android:text="@string/Change_type" />

        <Button
            android:id="@+id/other"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:drawablePadding="2dp"
            android:drawableTop="@drawable/ic_action_view_as_list"
            android:text="@string/Other_game" />
    </LinearLayout>

</LinearLayout>